[gd_scene load_steps=15 format=2]

[ext_resource path="res://data/enemy/enemy2/attack.JPG" type="Texture" id=1]
[ext_resource path="res://data/enemy/enemy2/run.JPG" type="Texture" id=2]
[ext_resource path="res://data/enemy/enemy2/turn_in.JPG" type="Texture" id=3]
[ext_resource path="res://data/enemy/enemy2/turn.JPG" type="Texture" id=4]
[ext_resource path="res://New folder/script/Enemy2.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 48, 20 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "attack"
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=14]
resource_name = "flip"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=16]
resource_name = "flip_moving"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=11]
resource_name = "move"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=15]
resource_name = "unflip"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 48, 10 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 48, 16 )

[node name="Enemy2" type="KinematicBody2D"]
position = Vector2( 0, 16 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
vframes = 12

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
texture = ExtResource( 3 )
vframes = 9
frame = 8

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 0 )
texture = ExtResource( 4 )
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 10 )
anims/attack = SubResource( 17 )
anims/flip = SubResource( 14 )
anims/flip_moving = SubResource( 16 )
anims/move = SubResource( 11 )
anims/unflip = SubResource( 15 )

[node name="ray" type="RayCast2D" parent="."]
position = Vector2( -64, -8 )
enabled = true
collision_mask = 2

[node name="ray2" type="RayCast2D" parent="."]
position = Vector2( -56, -24 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 2

[node name="enemy_damage" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_damage"]
position = Vector2( 0, -24 )
shape = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 13 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0

[node name="Timer" type="Timer" parent="."]
wait_time = 14.0

[connection signal="area_entered" from="enemy_damage" to="." method="_on_enemy_damage_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
